--- a/Modern_HTML_CSS_Traversy/CSS/Ch17_Tutor_Website_Project/index.html
+++ b/Modern_HTML_CSS_Traversy/CSS/Ch17_Tutor_Website_Project/index.html
@@ -54,40 +54,41 @@
                     <i class="fas fa-bars fa-2x"></i>
                  </div>
                  <!-- Mobile Menu Items -->
-                    <div class="mobile-menu-items">
-                        <ul class="mobile-menu-list">
-                            <li>
-                                <a href="#">Home</a>
-                            </li>
-                            <li>
-                                <a href="#chapters">Chapters</a>
-                            </li>
-                            <li>
-                                <a href="#summary">Summary</a>
-                            </li>
-                            <li>
-                                <a href="#takeaways">TakeAways</a>
-                            </li>
-                            <li>
-                                <a href="#author">Author</a>
-                            </li>
-                            <li>
-                                <a href="contact.html">Contact</a>
-                            </li>
-                            <li>
-                                <a href="facebook.com" target="_blank">
-                                    <i class="fa-brands fa-facebook"></i>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="twitter.com" target="_blank">
-                                    <i class="fa-brands fa-twitter"></i>
-                                </a>
-                            </li>
-                        </ul>
-             </div>
-
+                <div class="mobile-menu-items">
+                    <ul class="mobile-menu-list">
+                        <li>
+                            <a href="#">Home</a>
+                        </li>
+                        <li>
+                            <a href="#chapters">Chapters</a>
+                        </li>
+                        <li>
+                            <a href="#summary">Summary</a>
+                        </li>
+                        <li>
+                            <a href="#takeaways">TakeAways</a>
+                        </li>
+                        <li>
+                            <a href="#author">Author</a>
+                        </li>
+                        <li>
+                            <a href="contact.html">Contact</a>
+                        </li>
+                        <li>
+                            <a href="facebook.com" target="_blank">
+                                <i class="fa-brands fa-facebook"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="twitter.com" target="_blank">
+                                <i class="fa-brands fa-twitter"></i>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </div>
     </nav>
+    <script src="js/script.js"></script>
 </body>
 </html>
